<resources>
    <string name="app_name">KTTKJava</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="supplier_management">Supplier Management</string>
    <string name="import_product">Import Product</string>
    <string name="lending_partner_revenue_statistics">Lending Partner Revenue Statistics</string>
    <string name="supplier">Supplier...</string>
    <string name="search">Search</string>
    <string name="add_new_supllier">Add new supllier</string>
    <string name="supplier_address">Supplier address</string>
    <string name="supplier_phone">Supplier phone</string>
    <string name="supplier_email">Supplier email</string>
    <string name="supplier_description">Supplier description</string>
    <string name="add_supplier">Add supplier</string>
    <string name="cancel">Cancel</string>
    <string name="supplier_name">Supplier name</string>
    <string name="reset">Reset</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="product">Product...</string>
    <string name="add_new_product">Add New Product</string>
    <string name="product_name">Product name\n</string>
    <string name="product_description">product description\n</string>
    <string name="product_buy_price">product buy price</string>
    <string name="add_product">Add\n</string>
    <string name="add">Add</string>
    <string name="quantity">Quantity</string>
    <string name="checkout">Checkout</string>
    <string name="confirm">Confirm</string>
    <string name="address">Address</string>
    <string name="statistic_name">lending partner name</string>
    <string name="detail">Detail</string>
    <string name="chosen_product">Chosen Product</string>
    <array name="payment_methods">
        <item>Cash</item>
        <item>Bank transfer</item>
        <item>Paypal</item>
    </array>
</resources>